<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6CDCD"
    android:keepScreenOn="true"
    tools:context=".textAdjustment">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_adjust_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/text_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:text="@string/text_adjust_explanation"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <GridLayout
        android:id="@+id/text_grid"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:layout_below="@id/text_explanation"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp"
            >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

         <TextView
            android:id="@+id/adjusted_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_margin="5dp"
            android:text="@string/lorem_ipsum" android:textColor="@color/black" android:textSize="15sp"/>
        </ScrollView>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <GridLayout
        android:id="@+id/adjust_grid"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/text_grid"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:columnCount="3"
        android:rowCount="1"
        >
        <Button
            android:id="@+id/decrease_text"
            android:layout_row="0"
            android:layout_column="0"
            android:width="10dp"
            android:background="@drawable/round_btn"
            android:textSize="25sp"
            android:text="@string/minus"/>

        <Button
            android:id="@+id/increase_text"
            android:layout_row="0"
            android:layout_column="2"
            android:width="10dp"
            android:background="@drawable/round_btn"
            android:textSize="25sp"
            android:text="@string/plus"/>

        <TextView
            android:id="@+id/display_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/adjust_grid"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:columnCount="3"
        android:rowCount="1"
        >
        <Button
            android:id="@+id/cancel_text_adjust"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="105dp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/send_text_adjust"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:text="@string/send_values"/>
    </GridLayout>

</RelativeLayout>