<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6CDCD"
    android:keepScreenOn="true"
    tools:context=".makeProfile">

    <TextView
        android:id="@+id/profileText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/profile_title"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/profileExplanation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/profileText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/profile_explanation"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <GridLayout
        android:id="@+id/profile_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileExplanation"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sex_choose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/sex"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radio_s"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp">

                    <RadioButton
                        android:id="@+id/sex_female"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:onClick="checkButton"
                        android:text="@string/sex_f"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/sex_male"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="checkButton"
                        android:text="@string/sex_m"
                        android:textSize="18sp" />
                </RadioGroup>

                <TextView
                    android:id="@+id/age_range_choose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/age_range"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/spinner"
                    android:orientation="horizontal">
                <Spinner
                    android:id="@+id/age_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:popupElevation="0dp"
                    android:spinnerMode="dropdown"
                    tools:ignore="SpeakableTextPresentCheck" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/profile_options"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:columnCount="3"
        android:rowCount="1">

        <Button
            android:id="@+id/cancel_profile"
            android:layout_width="105dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/cancel"></Button>

        <Button
            android:id="@+id/send_profile"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/send_values"></Button>
    </GridLayout>

</RelativeLayout>