<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6CDCD"
    android:keepScreenOn="true"
    tools:context=".colorPick">

    <TextView
        android:id="@+id/colors_title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/colors_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/colors_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/colors_title"
        android:text="@string/colors_explanation"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <GridLayout
        android:id="@+id/colors_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/colors_explanation"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:rowCount="2"
        android:columnCount="1">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginBottom="20dp"
            >
            <LinearLayout
                android:id="@+id/color_option_A"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/layout_option_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@color/white"
                >
                <TextView
                    android:id="@+id/title_option_A"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/choice_title"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/text_option_A"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/choice_text"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/button_option_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice_button"/>
            </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginBottom="10dp"
            >
            <LinearLayout
                android:id="@+id/color_option_B"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/layout_option_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@color/white"
                >
                <TextView
                    android:id="@+id/title_option_B"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/choice_title"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/text_option_B"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/choice_text"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/button_option_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice_button"/>
            </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/colors_pick"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:columnCount="3"
        android:rowCount="1">
        <Button
            android:id="@+id/cancel_color_pick"
            android:layout_width="105dp"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/send_color_pick"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/send_values" />
    </GridLayout>
</RelativeLayout>