<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6CDCD"
    android:keepScreenOn="true"
    tools:context=".iconQuiz">

    <TextView
        android:id="@+id/quizText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/icon_quiz_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/quizExplanation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/quizText"
        android:text="@string/icon_quiz_explanation"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <GridLayout
        android:id="@+id/quiz_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quizExplanation"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text=""
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    />
                <ImageView
                    android:id="@+id/quiz_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"/>
                <Button
                    android:id="@+id/answer_A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    />
                <Button
                    android:id="@+id/answer_B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"/>
                <Button
                    android:id="@+id/answer_C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/quiz_question"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:columnCount="3"
        android:rowCount="1">
        <Button
            android:id="@+id/cancel_icon_quiz"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="105dp"
            android:text="@string/cancel">
        </Button>

        <Button
            android:id="@+id/send_icon_quiz"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:text="@string/send_values">
        </Button>
    </GridLayout>

</RelativeLayout>